Categorize subjects and assign max periods per week in timetable generation